<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_yes_no_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding15">

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding10"
        android:text="@string/app_name"
        android:textSize="@dimen/textSize16"
        android:textStyle="normal"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/dialogCancel"
        android:layout_below="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/dialogAccept"
        android:background="@null"
        android:minWidth="@dimen/padding60"
        android:textSize="@dimen/textSize14"
        android:textColor="@drawable/button_text"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/dialogAccept"
        android:layout_below="@+id/dialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:minWidth="@dimen/padding60"
        android:textSize="@dimen/textSize14"
        android:textColor="@drawable/button_text"
        android:text="@string/yes" />
</RelativeLayout>
