<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding10"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/actionVisitUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/visitIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding10"
            android:src="@drawable/ic_action_visit_url"
            android:contentDescription="@string/app_name" />

        <TextView
            fontPath="fonts/Montserrat-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/visitIcon"
            android:layout_centerVertical="true"
            android:text="@string/visit_url"
            android:textColor="@color/darkerGrey"
            android:textSize="@dimen/textSize13" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/actionCopyUrl"
        android:layout_below="@+id/actionVisitUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/copyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding10"
            android:src="@drawable/ic_action_copy_url"
            android:contentDescription="@string/app_name" />

        <TextView
            fontPath="fonts/Montserrat-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/copyIcon"
            android:layout_centerVertical="true"
            android:text="@string/copy_url"
            android:textColor="@color/darkerGrey"
            android:textSize="@dimen/textSize13" />
    </RelativeLayout>
</RelativeLayout>
